Fixes 404 errors on world leader countries with no world leader page. Styles the display lists of scrapable items to not wrap or overflow in smaller screen sizes.

--- a/data-glutton-ui/src/app/dashboard/dashboard.component.scss
+++ b/data-glutton-ui/src/app/dashboard/dashboard.component.scss
@@ -43,6 +43,14 @@
     height: 2.4rem;
     max-height: 2.4rem;
     min-height: 2.4rem;
+    white-space: nowrap;
+}
+
+.display-item-label {
+    max-width: 100%;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
 }
 
 .green-border {
